# onedep-test-framework

./: .gitignore  README.md  config.yaml  createdep.py  exptypes.txt  gettypes.py  main.py  map_upload.dict  pyproject.toml  test_archive.py  testfinder.py  updatemetadata.py
odtf/: aioapi.py  archive.py  cli.py  common.py  compare.py  config.py  models.py  report.py  wwpdb_uri.py
odtf/resources/: pdbx_contact_author.pkl
odtf/templates/: test_report.html
plans/: benchmark-20.yml  pdbe-local.yaml  pdbe-pre-annotation.yml  scenarios.yaml
scripts/: add_users.py  copy_pickles.py  view_deps.py
tests/: test_wwpdb_uri.py
